--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -104,7 +104,7 @@
       <AdditionalManifestFiles>VC90.CRT.x86.manifest;win81.manifest;%(AdditionalManifestFiles)</AdditionalManifestFiles>
       <EnableDPIAwareness>true</EnableDPIAwareness>
     </Manifest>
-  <FxCompile />
+    <FxCompile />
     <PostBuildEvent>
       <Command>copy “$(WindowsSdkDir)redist\d3d\x86\D3DCompile*.DLL” “$(TargetDir)”</Command>
     </PostBuildEvent>
@@ -142,7 +142,7 @@
       <AdditionalManifestFiles>VC90.CRT.x86.manifest;win81.manifest;%(AdditionalManifestFiles)</AdditionalManifestFiles>
       <EnableDPIAwareness>true</EnableDPIAwareness>
     </Manifest>
-  <FxCompile />
+    <FxCompile />
     <PostBuildEvent>
       <Command>copy “$(WindowsSdkDir)redist\d3d\x86\D3DCompile*.DLL” “$(TargetDir)”</Command>
     </PostBuildEvent>
@@ -175,7 +175,7 @@
       <AdditionalManifestFiles>VC90.CRT.x86.manifest;win81.manifest;%(AdditionalManifestFiles)</AdditionalManifestFiles>
       <EnableDPIAwareness>true</EnableDPIAwareness>
     </Manifest>
-  <FxCompile />
+    <FxCompile />
     <PostBuildEvent>
       <Command>copy “$(WindowsSdkDir)redist\d3d\x86\D3DCompile*.DLL” “$(TargetDir)”</Command>
     </PostBuildEvent>
@@ -432,6 +432,8 @@
     <ClCompile Include="..\..\xbmc\filesystem\ZipFile.cpp" />
     <ClCompile Include="..\..\xbmc\filesystem\ZipManager.cpp" />
     <ClCompile Include="..\..\xbmc\GUIInfoManager.cpp" />
+    <ClCompile Include="..\..\xbmc\guiinfo\GUIListItemInfoHelper.cpp" />
+    <ClCompile Include="..\..\xbmc\guiinfo\GUIListItemInfo.cpp" />
     <ClCompile Include="..\..\xbmc\guiinfo\GUIMusicPlayerInfo.cpp" />
     <ClCompile Include="..\..\xbmc\guiinfo\GUIMusicPMInfo.cpp" />
     <ClCompile Include="..\..\xbmc\guiinfo\GUINetworkInfo.cpp" />
@@ -971,15 +973,19 @@
     <ClInclude Include="..\..\xbmc\filesystem\XbtDirectory.h" />
     <ClInclude Include="..\..\xbmc\filesystem\XbtFile.h" />
     <ClInclude Include="..\..\xbmc\filesystem\XbtManager.h" />
-<ClInclude Include="..\..\xbmc\guiinfo\GUIMusicPlayerInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIListItemInfoHelper.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIListItemInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIMusicPlayerInfo.h" />
     <ClInclude Include="..\..\xbmc\guiinfo\GUIMusicPMInfo.h" />
-    <ClInclude Include="..\..\xbmc\guiinfo\GUINetworkInfo.h" /><ClInclude Include="..\..\xbmc\guiinfo\GUIPlayerInfo.h" />
-<ClInclude Include="..\..\xbmc\guiinfo\GUIPlaylistInfo.h" />
-    <ClInclude Include="..\..\xbmc\guiinfo\GUIPvrInfo.h" />    <ClInclude Include="..\..\xbmc\guiinfo\GUISystemInfo.h" />
- <ClInclude Include="..\..\xbmc\guiinfo\GUIVideoPlayerInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUINetworkInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIPlayerInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIPlaylistInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIPvrInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUISystemInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIVideoPlayerInfo.h" />
     <ClInclude Include="..\..\xbmc\guiinfo\GUIVisualisationInfo.h" />
     <ClInclude Include="..\..\xbmc\guiinfo\GUIWeatherInfo.h" />
-<ClInclude Include="..\..\xbmc\guilib\cximage.h" />
+    <ClInclude Include="..\..\xbmc\guilib\cximage.h" />
     <ClInclude Include="..\..\xbmc\guilib\GUIKeyboard.h" />
     <ClInclude Include="..\..\xbmc\guilib\GUIKeyboardFactory.h" />
     <ClInclude Include="..\..\xbmc\guilib\GUIShaderDX.h" />
